--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,10 @@ find_package(rclcpp REQUIRED)
 find_package(px4_msgs REQUIRED)
 find_package(msp_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(eigen3_cmake_module REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 #find_package(Boost REQUIRED thread)
 #find_package(eigen3_cmake_module REQUIRED)
@@ -32,9 +36,9 @@ add_executable(msp_controller src/msp_controller.cpp
                               src/msp_time_sync.cpp
                               src/msp_status_manager.cpp
                               )
-ament_target_dependencies(msp_controller rclcpp px4_msgs msp_msgs geometry_msgs )
+ament_target_dependencies(msp_controller rclcpp px4_msgs msp_msgs geometry_msgs Eigen3 tf2 tf2_ros )
 
-target_link_libraries(msp_controller pthread )
+target_link_libraries(msp_controller pthread Eigen3::Eigen )
 
 
 ament_export_dependencies(ament_cmake rclcpp rosidl_default_runtime px4_msgs)
